# AML_2

./: .gitignore  AML_Project_Task.md  README.md  pyproject.toml
data_analysis/: analyse_data.py  deep_analysis.py  loss_analysis.py  plot_metrics.py  quick_threshold_test.py
experiments/: ensemble_inference.py  inference.py  inference_advanced.py  inference_attention.py  inference_ensemble.py  inference_multiscale.py  inference_tta_full.py  train_attention_alldata.py  train_attention_unet.py  train_baseline.py  train_expert_only.py  train_resnet50_jaccard.py  train_teammate_style.py
src/: dataset.py  inference_tta.py  model.py  train.py  utils.py
