[project]
name = "AML-Project-2"
version = "0.1.0"
description = "A pipeline for automating mitral-valve segmentation in echocardiography videos using learned spatiotemporal models."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.3",
    "scikit-learn>=1.3.0",
    "albumentations>=1.3.1",
    "opencv-python-headless>=4.8.0",
]
